upload files for demo

--- a/about.html
+++ b/about.html
@@ -7,9 +7,9 @@
 	<meta name="description" content="Project Description" />
 	<meta name="keywords" content="Project Keywords" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<title>Minimal Gallery Theme</title>	
+	<title>Minimal Theme</title>	
 	<link href="css/style.css" rel="stylesheet" type="text/css" />
-	<link href="css/responsive.css" rel="stylesheet" type="text/css" />
+	<link href="css/responsive.css" rel="stylesheet" type="text/css" />		
 	<link rel="stylesheet" href="css/slimbox2.css" type="text/css" media="screen" />	
  	<!--[if IE]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
@@ -30,8 +30,8 @@
 			</div>
 			<nav class="top-nav">
 				<ul>
-					<li class="current"><a href="index.html">Home</a></li>
-					<li><a href="about.html">About</a></li>
+					<li><a href="index.html">Home</a></li>
+					<li class="current"><a href="about.html">About</a></li>
 					<li class="last"><a href="mailto:ajbiscaro@gmail.com">Contact</a></li>
 				</ul>
 			</nav>
@@ -40,27 +40,9 @@
 
 	<div id="main-content" class="clearfix">
 		<div class="container">
-			<h1>Gallery</h1>
-			<ul>
-				<li>					
-					<a href="images/image1.jpg" rel="lightbox-journey" title="Bee on Flower"><img src="images/image1.jpg" alt="Portfolio Image"></a>
-				</li>
-				<li>
-					<a href="images/image2.jpg" rel="lightbox-journey" title="Purple Flowers"><img src="images/image2.jpg" alt="Portfolio Image"></a>
-				</li>
-				<li>
-					<a href="images/image3.jpg" rel="lightbox-journey" title="Sun Flower"><img src="images/image3.jpg" alt="Portfolio Image"></a>
-				</li>
-				<li>
-					<a href="images/image4.jpg" rel="lightbox-journey" title="Bell Amphitheater, Camp John Hay"><img src="images/image4.jpg" alt="Portfolio Image"></a>
-				</li>
-				<li>
-					<a href="images/image5.jpg" rel="lightbox-journey" title="Hundred Islands, Pangasinan"><img src="images/image5.jpg" alt="Portfolio Image"></a>
-				</li>
-				<li class="last">
-					<a href="images/image6.jpg" rel="lightbox-journey" title="Hundred Islands, Pangasinan"><img src="images/image6.jpg" alt="Portfolio Image"></a>				
-				</li>
-			</ul>
+			<h1>About</h1>
+			<p><strong>Sev Photography Gallery</strong></p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ut sapien orci. Curabitur a vulputate urna. Sed non quam et elit scelerisque tincidunt eget nec urna. Nullam adipiscing mattis purus ac sodales. Morbi aliquet lacus eget scelerisque hendrerit. Nunc sit amet est a massa porttitor cursus sed non nibh. Cras dictum, purus quis suscipit consectetur, nulla massa rutrum odio, quis fermentum velit arcu et mi. Nulla accumsan ante ac lacus ultrices, id ultrices tellus vestibulum. Suspendisse convallis tristique dignissim. Fusce volutpat sagittis euismod. Duis id elementum metus. Sed sagittis, nibh eget suscipit aliquet, elit lacus euismod lacus, sed ultricies nibh lorem et metus. Proin tincidunt lectus non quam vehicula, non laoreet leo tincidunt. Maecenas metus tortor, venenatis id cursus et, consectetur id sapien. Donec semper nunc tellus, et gravida ligula tempor quis. Donec nec ultrices lorem.</p>
 		</div>
 	</div><!-- end #main-content -->
 
